--- a/Trappist/src/Promact.Trappist.Web/package.json
+++ b/Trappist/src/Promact.Trappist.Web/package.json
@@ -24,7 +24,7 @@
     "md2": "0.0.18",
     "ng2-ckeditor": "^1.1.6",
     "ngx-clipboard": "5.1.0",
-    "ngx-popover": "file:node_modules\\ngx-popover",
+    "ngx-popover": "0.0.16",
     "rxjs": "5.4.2",
     "systemjs": "0.19.40",
     "tinymce": "^4.6.4",
