--- a/Trappist/src/Promact.Trappist.Web/package.json
+++ b/Trappist/src/Promact.Trappist.Web/package.json
@@ -15,6 +15,7 @@
     "@angular/platform-browser-dynamic": "~4.0.0",
     "@angular/router": "~4.0.0",
     "angular2-infinite-scroll": "^0.3.5",
+    "angular2-tinymce": "^2.1.2",
     "angular2-wizard-fix": "0.2.2",
     "bootstrap": "3.3.7",
     "clipboard": "^1.6.1",
@@ -24,6 +25,7 @@
     "ngx-clipboard": "5.1.0",
     "rxjs": "5.0.1",
     "systemjs": "0.19.40",
+    "tinymce": "file://node_modules\\tinymce",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
