--- a/Trappist/src/Promact.Trappist.Web/package.json
+++ b/Trappist/src/Promact.Trappist.Web/package.json
@@ -25,7 +25,7 @@
     "ngx-clipboard": "5.1.0",
     "rxjs": "5.0.1",
     "systemjs": "0.19.40",
-    "tinymce": "file://node_modules\\tinymce",
+    "tinymce": "^4.6.4",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
