--- a/Trappist/src/Promact.Trappist.Web/package.json
+++ b/Trappist/src/Promact.Trappist.Web/package.json
@@ -35,6 +35,7 @@
     "ngx-clipboard": "5.1.0",
     "ngx-popover": "0.0.16",
     "rxjs": "5.4.2",
+    "screenfull": "^3.3.1",
     "systemjs": "0.19.40",
     "tinymce": "^4.6.4",
     "zone.js": "^0.8.4"
