--- a/Trappist/src/Promact.Trappist.Web/package.json
+++ b/Trappist/src/Promact.Trappist.Web/package.json
@@ -21,6 +21,8 @@
     "bootstrap": "3.3.7",
     "clipboard": "^1.6.1",
     "core-js": "^2.4.1",
+    "jspdf": "^1.3.3",
+    "jspdf-autotable": "^2.3.2",
     "md2": "0.0.18",
     "ng2-ckeditor": "^1.1.6",
     "ngx-clipboard": "5.1.0",
@@ -28,6 +30,7 @@
     "rxjs": "5.4.2",
     "systemjs": "0.19.40",
     "tinymce": "^4.6.4",
+    "typings": "^2.1.1",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
