--- a/Trappist/src/Promact.Trappist.Web/package.json
+++ b/Trappist/src/Promact.Trappist.Web/package.json
@@ -22,6 +22,8 @@
     "chart.js": "^2.5.0",
     "clipboard": "^1.6.1",
     "core-js": "^2.4.1",
+    "jspdf": "^1.3.3",
+    "jspdf-autotable": "^2.3.2",
     "md2": "0.0.18",
     "ng2-charts": "^1.5.0",
     "ng2-ckeditor": "^1.1.6",
@@ -30,6 +32,7 @@
     "rxjs": "5.4.2",
     "systemjs": "0.19.40",
     "tinymce": "^4.6.4",
+    "typings": "^2.1.1",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
