--- a/Trappist/src/Promact.Trappist.Web/package.json
+++ b/Trappist/src/Promact.Trappist.Web/package.json
@@ -21,15 +21,18 @@
     "chart.js": "2.5.0",
     "clipboard": "^1.6.1",
     "core-js": "^2.4.1",
+    "exceljs": "^0.5.1",
+    "file-saver": "^1.3.3",
     "jspdf": "^1.3.3",
     "jspdf-autotable": "^2.3.2",
     "md2": "0.0.18",
-    "ng2-charts": "1.5.0",
+    "ng2-charts": "^1.5.0",
     "ng2-ckeditor": "^1.1.6",
     "ngx-clipboard": "5.1.0",
     "ngx-popover": "0.0.16",
     "rxjs": "5.4.2",
     "systemjs": "0.19.40",
+    "tempfile": "^2.0.0",
     "tinymce": "^4.6.4",
     "zone.js": "^0.8.4"
   },
