--- a/Trappist/src/Promact.Trappist.Web/package.json
+++ b/Trappist/src/Promact.Trappist.Web/package.json
@@ -17,16 +17,20 @@
     "@angular/router": "~4.3.0",
     "angular2-infinite-scroll": "^0.3.5",
     "angular2-wizard-fix": "0.2.2",
+    "base64-js": "^1.2.1",
     "bootstrap": "3.3.7",
+    "buffer": "^5.0.6",
     "chart.js": "2.5.0",
     "clipboard": "^1.6.1",
     "core-js": "^2.4.1",
     "exceljs": "^0.5.1",
     "file-saver": "^1.3.3",
+    "ieee754": "^1.1.8",
     "jspdf": "^1.3.3",
     "jspdf-autotable": "^2.3.2",
     "md2": "0.0.18",
-    "ng2-charts": "^1.5.0",
+    "ng2-ace-editor": "^0.2.3",
+    "ng2-charts": "1.5.0",
     "ng2-ckeditor": "^1.1.6",
     "ngx-clipboard": "5.1.0",
     "ngx-popover": "0.0.16",
