--- a/Trappist/src/Promact.Trappist.Web/appsettings.json
+++ b/Trappist/src/Promact.Trappist.Web/appsettings.json
@@ -13,7 +13,7 @@
       "Microsoft": "Information"
     }
   },
-  "CodeBaseSimulatorServer": "http://codesimulator.promactinfo.com/api/execute",
-  "CodeBaseSimulatorServerAPIKey": "codeserver-ZDD5yjGViNaGBHxnRvT3fIUShjPvX3qr",
+  "CodeBaseSimulatorServer": "http://yourcodebase.server.url",
+  "CodeBaseSimulatorServerAPIKey": "",
   "ExceptionlessKey": "UBU3FVySPcoPSuMUhpcC0Vaddrh29dTmMvBC9uF2"
 }
