--- a/Trappist/src/Promact.Trappist.Web/package.json
+++ b/Trappist/src/Promact.Trappist.Web/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~4.3.0",
-    "@angular/cdk": "^2.0.0-beta.8",
+    "@angular/cdk": "2.0.0-beta.8",
     "@angular/common": "~4.3.0",
     "@angular/compiler": "~4.3.0",
     "@angular/compiler-cli": "~4.3.0",
