--- a/Trappist/src/Promact.Trappist.Web/Promact.Trappist.Web.csproj
+++ b/Trappist/src/Promact.Trappist.Web/Promact.Trappist.Web.csproj
@@ -35,6 +35,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="1.1.0">
       <PrivateAssets>All</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Caching.Redis" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Caching.SqlServer" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="1.1.1" />
