--- a/Trappist/src/Promact.Trappist.Web/Promact.Trappist.Web.csproj
+++ b/Trappist/src/Promact.Trappist.Web/Promact.Trappist.Web.csproj
@@ -18,7 +18,8 @@
   <ItemGroup>
     <PackageReference Include="Exceptionless.AspNetCore" Version="4.0.1955" />
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.1.1" /> 
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="1.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="1.1.1" /> 
+    <PackageReference Include="Microsoft.AspNetCore.DataProtection.Redis" Version="0.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics" Version="1.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="1.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="1.1.1" />
