--- a/Trappist/src/Promact.Trappist.Utility/Promact.Trappist.Utility.csproj
+++ b/Trappist/src/Promact.Trappist.Utility/Promact.Trappist.Utility.csproj
@@ -1,17 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard1.6</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>Promact.Trappist.Utility</AssemblyName>
     <PackageId>Promact.Trappist.Utility</PackageId>
-    <PackageTargetFallback>$(PackageTargetFallback);dnxcore50</PackageTargetFallback>
+    <AssetTargetFallback>$(AssetTargetFallback);dnxcore50</AssetTargetFallback>
     <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
     <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MailKit" Version="1.12.0" />
+    <PackageReference Include="MailKit" Version="1.18.1.1" />
   </ItemGroup>
 
   <ItemGroup>
