--- a/Trappist/src/Promact.Trappist.Web/package.json
+++ b/Trappist/src/Promact.Trappist.Web/package.json
@@ -46,6 +46,7 @@
     "@types/node": "^7.0.5",
     "angular2-tinymce": "^2.1.2",
     "codelyzer": "^2.0.0-beta.4",
+    "concurrently": "^3.5.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-inline-ng2-template": "^4.0.0",
@@ -54,6 +55,8 @@
     "gulp-tslint": "^7.1.0",
     "gulp-typescript": "^3.1.5",
     "gulp-uglify": "^2.1.0",
+    "jasmine-core": "^2.8.0",
+    "lite-server": "^2.3.0",
     "rollup": "^0.41.6",
     "rollup-plugin-commonjs": "^8.0.2",
     "rollup-plugin-node-resolve": "^3.0.0",
@@ -68,6 +71,9 @@
   "scripts": {
     "lint": "gulp lint",
     "ngc": "gulp ngc",
-    "prod": "gulp prod"
+    "prod": "gulp prod",
+    "start": "tsc && concurrently \"tsc -w\" \"lite-server\" ",
+    "test": "npm start",
+    "tsc": "tsc"
   }
 }
