--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ services:
 cache:
   directories:
     - Trappist/src/Promact.Trappist.Web/node_modules
+    - $HOME/.nuget
+    - $HOME/.nvm
 before_install:
 - nvm install 6.9.1
 - nvm use 6.9.1
