--- a/.travis.yml
+++ b/.travis.yml
@@ -6,20 +6,20 @@ dotnet: 1.0.1
 services:
 - docker
 cache:
-  directories:
-    - Trappist/src/Promact.Trappist.Web/node_modules
+  yarn: true
 before_install:
 - nvm install 6.9.1
 - nvm use 6.9.1
-- npm install -g npm
+- curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.1.0
+- export PATH=$HOME/.yarn/bin:$PATH
 install:
 - dotnet restore ./Trappist/Trappist.sln
-- cd ./Trappist/src/Promact.Trappist.Web && npm install && cd ../../../
+- cd ./Trappist/src/Promact.Trappist.Web && yarn && cd ../../../
 script:
 - dotnet build ./Trappist/Trappist.sln
 - dotnet test Trappist/src/Promact.Trappist.Test/Promact.Trappist.Test.csproj
-- npm run lint --prefix ./Trappist/src/Promact.Trappist.Web
-- npm run ngc --prefix ./Trappist/src/Promact.Trappist.Web
+- yarn run lint --prefix ./Trappist/src/Promact.Trappist.Web
+- yarn run ngc --prefix ./Trappist/src/Promact.Trappist.Web
 deploy:
 - provider: script
   script: chmod +x $TRAVIS_BUILD_DIR/deploy.sh && sh $TRAVIS_BUILD_DIR/deploy.sh
